Updated isle-fedora to use isle-tomcat base. Things here still need to change. @TODO: yes.